# ComputerGrafik

./: CMakeLists.txt  PieceShader.fs
include/: Shader.h  Spielstein.h  camera.h  light.h  mesh.h  model.h  piece.h  shader.h
include/glad/: glad.h
include/learnopengl/: mesh.h  model.h  shader_m.h
resources/objects/Modelle/: Haus.mtl  Haus_Spielstein.mtl  Hotel.mtl  Hotel_Spielstein.mtl  Hut.mtl  Kanone.mtl  Zylinder.mtl  haus_set.mtl  hotel_set.mtl  img_test.mtl
resources/objects/Monopoly/: monopoly.mtl  szene.mtl
resources/objects/test/: Test2.fbx  Test2.mtl  untitled.mtl
resources/shaders/: Model.fs  Model.vs  PieceShader.fs  PieceShader.vs  depthMap.fs  depthMap.vs  fingerhut.fs  monopoly.fs  monopoly.vs  piece.fs  skybox.fs
resources/shaders/Shaders/: shader.fs  shader.vs
resources/shaders/Shaders/Cube/: Cube.fs  Cube.vs
resources/shaders/Shaders/Lamp/: Lamp.fs  Lamp.vs
resources/shaders/Shaders/Model/: model.fs
resources/shaders/Shadows/: fingerhut.fs  fingerhut.vs
src/: glad.c  main.cpp  test.cpp
